syntax = "proto3";

option csharp_namespace = "RVAegis";

package image_transfer;

message ImageRequest {
    bytes image = 1;
}

message ImageResponse {
    bytes image = 1;
}

message MultipleImageRequest {
    repeated bytes images = 1;
}

message MultipleImageResponse {
    string status = 1;
    int32 count = 2;
}

message ImageLoadError {
    string filename = 1;
    string error = 2;
}

message MultipleImageErrorResponse {
    string status = 1;
    repeated ImageLoadError results = 2;
}

service ImageTransfer {
    rpc TransferImage (ImageRequest) returns (ImageResponse);
    rpc TransferMultipleImages (MultipleImageRequest) returns (MultipleImageResponse);
}